--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -980,7 +980,7 @@
                                                         </div>-->
                                                         <div class="col-lg-2 col">
                                                                 <button
-                                                                    class="btn btn-light view-btn" style="width: 100%;"  data-bs-target="#showModal" (click)="openModal3(content3, 'single', s)">Configurar elementos</button>
+                                                                    [ngClass]="byArticuloVinculacion(s.articuloId) > 0 && !onCheckVincular(s.articuloId) ? 'btn btn-light view-btn text-success' : 'btn btn-light view-btn'" style="width: 100%;" data-bs-target="#showModal" (click)="openModal3(content3, 'single', s)">{{byArticuloVinculacion(s.articuloId) > 0 && !onCheckVincular(s.articuloId) ? 'Modificar elementos' : 'Configurar elementos'}}</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1295,7 +1295,7 @@
                             text-align: left;
                         ">Selecciona el área</button>    
                             <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
-                            <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;" ngbDropdownMenu>
+                            <div class="dropdown-menu dropdown-menu-dark" style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                 <!--<a class="dropdown-item" [ngClass]="!area_chart ? 'active' : ''" href="javascript:void(0);" (click)="selectAreaChart()">Todos</a>-->
                                 <ng-container *ngFor="let ar of areas_chart;">
                                     <a class="dropdown-item" href="javascript:void(0);" (click)="selectAreaChart(ar.id)">{{ar.nombre}}</a>
@@ -1948,13 +1948,12 @@
                 
                                         <div class="btn-group" style="width: 100%;" ngbDropdown>
                                             
-                                            <button type="button" class="btn btn-light dropdown-toggle dropdown-disable" style="
+                                            <button type="button" class="btn btn-primary dropdown-toggle dropdown-disable" style="
                                             width: 100%;
                                             text-align: left;
-                                            background: white;
                                         " data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_cuerpo ? 'CUERPO LEGAL' : filtro_cuerpo }}</button>    
-                                            <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
-                                            <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;" ngbDropdownMenu>
+                                            <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
+                                            <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                                 <!--<a class="dropdown-item" [ngClass]="!filtro_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectCuerpoFiltro()">Todos</a>-->
                                                 
                                                 <ng-container *ngFor="let g of articles_proyects_group;">
@@ -2045,7 +2044,7 @@
                                             background: white;
                                         " data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_articulo ? 'Seleccione el árticulo' : filtro_articulo }}</button>
                                             <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split ml-auto" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
-                                            <div class="dropdown-menu dropdown-menu-left dropdown-menu-dark" style="width: 100%;" ngbDropdownMenu>
+                                            <div class="dropdown-menu dropdown-menu-left dropdown-menu-dark" style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                                 <a class="dropdown-item" [ngClass]="!filtro_articulo ? 'active' : ''" href="javascript:void(0);" (click)="selectArticuloFiltro()">Todos</a>
 
                                                 <ng-container *ngFor="let ach of articles_filter"><!--getArticulos()-->
@@ -2069,7 +2068,7 @@
                                             background: white;
                                         " data-bs-toggle="dropdown"  aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>{{ !filtro_area_cuerpo ? 'Selecciona el área' : filtro_area_cuerpo.nombre }}</button>    
                                             <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle></button>
-                                            <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;" ngbDropdownMenu>
+                                            <div class="dropdown-menu dropdown-menu-dark"  style="width: 100%;height: 200px;overflow-y:scroll;" ngbDropdownMenu>
                                                 <!--<a class="dropdown-item" [ngClass]="!area_chart ? 'active' : ''" href="javascript:void(0);" (click)="selectAreaChart()">Todos</a>-->
                                                 <a class="dropdown-item" [ngClass]="!filtro_area_cuerpo ? 'active' : ''" href="javascript:void(0);" (click)="selectAreaChartCuerpo()">Todos</a>
 
