--- a/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-evaluations/project-evaluations.component.html
@@ -19,6 +19,8 @@
                                     <button type="button" style="
                                     width: 200px;" class="btn btn-light waves-effect waves-light" routerLink="/{{project_id}}/project-dashboard"><!--<i class="ri-arrow-right-line label-icon align-middle fs-16"></i> -->Salir</button>
 
+                                    <button type="button" class="btn btn-primary btn-label right waves-effect waves-light" (click)="goDashboard()"><i class="ri-arrow-right-line label-icon align-middle fs-16"></i> Dashboard</button>
+
                                     <button type="button" style="margin-left: 20px;" class="btn btn-primary waves-effect waves-light" (click)="terminar()" *ngIf="!this.evaluations.fechaFinalizacion"><!-- btn-label left <i class="ri-add-line label-icon align-middle fs-16"></i>--> Finalizar Evaluación</button>
                                 </div>
                             </div>
