--- a/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.scss
+++ b/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.scss
@@ -9,3 +9,33 @@
 .text-aplicables{
     font-size: 24px;
 }
+
+.dropdown-disable::after{
+    display: none !important;
+}
+
+.chip {
+    display: inline-block;
+    padding: 0 10px;
+    //height: 50px;
+    font-size: 12px;
+    line-height: 24px;
+    border-radius: 25px;
+    color: white;
+    background-color: #405189;
+    width: auto;//100%;
+    margin-left: 10px;
+  }
+
+  .closebtn {
+    padding-left: 10px;
+    color: white;
+    //font-weight: bold;
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  .closebtn:hover {
+    color: #000;
+  }
