--- a/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-resumen/project-resumen.component.html
@@ -29,6 +29,19 @@
                           Operaciones
                         </a>
                         <ng-template ngbNavContent>
+                            <div class="row g-4 mb-3">
+                                <div class="col-lg-4">
+                                    <span style="color: #405189;"><b> Avance de la evaluación</b></span>
+                                </div>
+                                <div class="col-lg-8" style="text-align: right;">
+                                    <span style="color: #405189;"> 65% (977/1000) de instancias de cumplimiento evaluadas</span>
+                                </div>
+                                <div class="col-lg-12">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" [style]="avance_evaluacion > 0 ? 'width:'+avance_evaluacion+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">{{avance_evaluacion}}%</div>
+                                    </div>
+                                </div>
+                            </div>
                             
                         <div class="row g-4 mb-3">
                     
@@ -476,6 +489,20 @@
                       Cuerpos Legales
                     </a>
                     <ng-template ngbNavContent>
+                        
+                        <div class="row g-4 mb-3">
+                            <div class="col-lg-4">
+                                <span style="color: #405189;"><b> Avance de la evaluación</b></span>
+                            </div>
+                            <div class="col-lg-8" style="text-align: right;">
+                                <span style="color: #405189;"> 65% (977/1000) de instancias de cumplimiento evaluadas</span>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" [style]="avance_evaluacion > 0 ? 'width:'+avance_evaluacion+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">{{avance_evaluacion}}%</div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="row g-4 mb-3">    
                             <div class="col-12">
         
